VendorCalc/force-app/main/default/objects/Amortization_Result__c/Amortization_Result__c.object-meta.xml
<CustomObject>
    <label>Amortization Result</label>
    <nameField>
        <label>Amortization Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amortization Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>