VendorCalc/force-app/main/default/objects/Amortization_Result__c/fields/Amortization_Value__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Value__c</fullName>
    <label>Amortization Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Non Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>