VendorCalc/force-app/main/default/objects/Amortization_Result__c/fields/Calculator_Result__c.field-meta.xml
<CustomField>
    <fullName>Calculator_Result__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Calculator Result</label>
    <referenceTo>Calculator__c</referenceTo>
    <relationshipLabel>Amortization Results</relationshipLabel>
    <relationshipName>Amortization_Results</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>