VendorCalc/force-app/main/default/objects/Amortization_Result__c/fields/Extra_Payment__c.field-meta.xml
<CustomField>
    <fullName>Extra_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This fields used in the backed code. No need to add in Salesforce layout.</description>
    <inlineHelpText>This fields used in the backed code. No need to add in Salesforce layout.</inlineHelpText>
    <label>Extra Payment</label>
    <type>Checkbox</type>
</CustomField>